--- a/yelibs/src/main/AndroidManifest.xml
+++ b/yelibs/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest package="com.reemanye.yelibs"
+<manifest package="com.kermitye.yelibs"
           xmlns:android="http://schemas.android.com/apk/res/android"/>
